--- a/Assignment.html
+++ b/Assignment.html
@@ -1,3 +1,4 @@
+<html>
 <HEAD > 
 <div style="display: flex;margin-left:20px">
 <div style="margin-left:100px">
@@ -17,19 +18,50 @@
 <body >
     <div>
          <h2 style="margin-left:100px";>OBJECTIVE :</h2>
-         <p style="margin-left:150px;"> I was studying Electrical and Electronic Engineering from University of Asia Pacific.I want work Electrical field </p>
+         <p style="margin-left:150px;"> I was studying Electrical and Electronic Engineering from University of Asia Pacific.I want to  work Electrical field </p>
     </div>
     <div>
-        <h2 style="margin-left:100px";>EDUCATION :  </h2>
-        <p style="margin-left:200px;" > <b> University of Asia Pacific</b> <br> Farmgate,Dhaka <br>Department of Electrical and Electronic Engineering <br> 2019-present </p>
-        
-        <p style="margin-left:200px;"  > <b>Government Ibrahim Khan College</b> <br> Buapur,Tangail <br> 2017-2018 <br> <b>Result :</b> CGPA 4.20  </p>
-        <p style="margin-left:200px;" > <b>Narandia T.R.K.N School and college</b>  <br> Narandia,Kalihati,Tangail <br> session : 2016 <br> <b>Result :</b> CGPA 4.06 </p>
+        <h2 style="margin-left:100px";>EDUCATION ACTIVITY :</h2>
+       <table border="1px" style="text-align: center;width:80%;margin-left:150px;border-collapse: collapse;border-width: 1px;">
+        <tr>
+            <th>Examination</th>
+            <th>Board/University</th>
+            <th>Group/Subject</th>
+            <th>Result</th>
+            <th>passing year </th>
+        </tr>
+        <tr>
+            <td>S.S.C</td>
+            <td>Dhaka</td>
+            <td>Science</td>
+            <td>4.20</td>
+            <td>2017</td>
+        </tr>
+        <tr>
+            <td>H.S.C</td>
+            <td>Dhaka</td>
+            <td>Science</td>
+            <td>4.06</td>
+            <td>2019</td>
+        </tr>
+        <tr>
+            <td>H.S.C</td>
+            <td>University of Asia Pacific</td>
+            <td>Electrical and Electronic Engineering </td>
+            <td>3.10</td>
+            <td>present</td>
+        </tr>
+       </table>
     </div>
     <div> 
         <h2 style="margin-left:100px"> EXTRA-CURRICULAR ACTIVITY :</h2>
-        <p style="margin-left:200px;" ><b>UAP Project club</b> <br> Graphic desginer <br> University of Asia Pacific <br> <b>july,2022 - july,2023</b>   </p>
-       <p style="margin-left:200px;"><b>Bangladesh Math Olypiad</b> <br> volunteer  </p>
+      <ul type="square"> 
+       <li style="margin-left:120px;" > <p  ><b>UAP Project club</b> <br> Graphic desginer <br> University of Asia Pacific <br> <b>july,2022 - july,2023</b>   </p> </li>
+       <li style="margin-left:120px;"><p ><b>Bangladesh Math Olypiad</b> <br> volunteer  </p></li>
+       <li style="margin-left:120px;"><p><b>International Electrical and Electronic Engineering (IEEE) </b> <br> General Member  </p> </li>
+        <li style="margin-left:120px;"><p> <b>UAP EEE Debate Club </b> <br> General Secretary</p> </li>  
+    </ul>  
     </div>
     
-</body>
+  </body>
+</html>
